hub/jekyll/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jekyll-service
  namespace: jekyll
spec:
  selector:
    app: jekyll
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
